--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="styles.css">
         
        </head>
-    <body><h1>Title</h1>
+    <body onload="initPage()">
+        <h1 id="heading">Title - FRIDAY</h1>
 <div id="main">
 
 </div>
 </body>
 </html>
-<script src="control.js">
+<script src="control.js"></script>
