added makeAList, error handling, loadVoters

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,14 @@
        </head>
     <body onload="initPage()">
         <h1 id="heading">Title - FRIDAY</h1>
-<div id="main">
+<div id="potentialBallots">
+    <h2>Candidates</h2>
+
+</div>
+<div id="controls">
+    <button onclick="addVoter">[ Add a new voter ]</button>
+</div>
+<div id="completedBallots">
 
 </div>
 </body>
