added view control variable

--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,22 @@
         
        </head>
     <body onload="initPage()">
-        <h1 id="heading">Title - FRIDAY</h1>
+        <h1 id="heading">Title </h1>
         <div id="messages"></div>
-<div id="potentialBallots">
-    <h2>Candidates</h2>
+<h2>Candidates</h2>
+    <div id="candidateList" class="displayArea">
+
+    </div>
+    <h2>Voters not voted</h2>
+<div id="potentialBallots" class="displayArea">
+   
 
 </div>
 <div id="controls">
     <button id="addBtn">[ Add a new voter ]</button>
 </div>
-<div id="completedBallots">
+<h2>Voters who have voted</h2>
+<div id="completedBallots" class="displayArea">
 
 </div>
 <!-- modal window for adding a voter -->
