--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
 </div>
 <div id="controls">
     <button id="addBtn">[ Add a new voter ]</button>
+    <button id="showResults">[ Show Results ]</button>
 </div>
 <h2>Voters who have voted</h2>
 <div id="completedBallots" class="displayArea">
