--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
     <div class="modal-content">
         <span class="close">X</span>
     <p><input type="text" name="userName" id="userName"></p>
-    <p><button id="submitBtn" onclick="return submitAddUser()">[ submit ] </button></p>
+    <p><button id="submitBtn" onclick="return recordNewVoter()">[ submit ] </button></p>
     </div>
     </form>
 </div>
